--- a/struts/WebRoot/css/ShowWishes.css
+++ b/struts/WebRoot/css/ShowWishes.css
@@ -72,6 +72,14 @@ footer {
 margin-right: 15px;
 }
 
-.col-xs-3{
-  top:180px;
-right: -50px;}
+.row{
+
+  margin-top: 0px;
+}
+
+.showmore {
+  width: 140px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 50px;
+}
